[gd_scene load_steps=18 format=3 uid="uid://e4g3db01cv23"]

[ext_resource type="Script" path="res://Scenes/Player_e_misc/Player/CharacterBody2D.gd" id="1_k0pig"]
[ext_resource type="Texture2D" uid="uid://fcjwgbvtu06l" path="res://sprites/player/Casco/Casco1.png" id="2_r5lx4"]
[ext_resource type="Texture2D" uid="uid://cocbp3s5ii87t" path="res://sprites/player/Arma/arma1.png" id="3_a035m"]
[ext_resource type="Texture2D" uid="uid://bcu5ky7sxtmn3" path="res://sprites/player/Motor/turbina1.png" id="4_ynpd3"]
[ext_resource type="Texture2D" uid="uid://bfsh27fh56qh7" path="res://sprites/player/Motor/turbina1_2.png" id="5_f1d4h"]
[ext_resource type="Texture2D" uid="uid://vjb3rydk6640" path="res://sprites/player/Sonar/sonar1.png" id="6_22ess"]
[ext_resource type="Texture2D" uid="uid://cvae20cgax3sk" path="res://sprites/player/Sonar/sonar1_2.png" id="7_3ljv3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1eeoj"]
animations = [{
"frames": [],
"loop": true,
"name": &"Casco Base",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_a0lt3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r5lx4")
}],
"loop": true,
"name": &"casco 1",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_mb5m8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_a035m")
}],
"loop": true,
"name": &"arma 1",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_qncdd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ynpd3")
}, {
"duration": 1.0,
"texture": ExtResource("5_f1d4h")
}],
"loop": true,
"name": &"Motor 1",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2lbqy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_22ess")
}, {
"duration": 1.0,
"texture": ExtResource("7_3ljv3")
}],
"loop": true,
"name": &"Sonar 1",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_sbpw5"]
colors = PackedColorArray(0.613281, 0.764343, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w4kjf"]
gradient = SubResource("Gradient_sbpw5")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.522936)
fill_to = Vector2(0.853211, 0.853211)

[sub_resource type="Gradient" id="Gradient_xpgn4"]
offsets = PackedFloat32Array(0, 0.655844)
colors = PackedColorArray(0.078125, 1, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s5eh0"]
gradient = SubResource("Gradient_xpgn4")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.495413, 0.477064)
fill_to = Vector2(0, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_qow0k"]
radius = 500.0

[node name="Player" type="CharacterBody2D"]
light_mask = 0
position = Vector2(1044, 422)
script = ExtResource("1_k0pig")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.86102e-06, 1.14441e-05)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_1eeoj")
animation = &"Casco Base"
metadata/_edit_group_ = true

[node name="Casco" type="AnimatedSprite2D" parent="Sprite"]
sprite_frames = SubResource("SpriteFrames_a0lt3")
animation = &"casco 1"

[node name="Arma" type="AnimatedSprite2D" parent="Sprite"]
position = Vector2(-0.999982, -3.97364e-06)
sprite_frames = SubResource("SpriteFrames_mb5m8")
animation = &"arma 1"

[node name="Turbina" type="AnimatedSprite2D" parent="Sprite"]
position = Vector2(0, 1.01725e-05)
sprite_frames = SubResource("SpriteFrames_qncdd")
animation = &"Motor 1"
frame_progress = 0.248605
metadata/_edit_lock_ = true

[node name="Sonar" type="AnimatedSprite2D" parent="Sprite"]
position = Vector2(0, 1.01725e-05)
sprite_frames = SubResource("SpriteFrames_2lbqy")
animation = &"Sonar 1"
frame_progress = 0.382877
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-4.99988, -12)
rotation = 1.5708
polygon = PackedVector2Array(20.0001, 27, 24.0001, 27, 24.0002, 55, -23.9998, 55.0002, -23.9999, 7.00024, -51.9999, 7.00024, -52.0001, -28.9998, -25.0001, -28.9998, -11.0002, -52.9999, 19.9998, -53, 19.9998, -61, 55.9998, -61.0001, 55.9998, -49.0001, 47.9998, -49.0001, 48, -9.00012, 37, -9, 24.0001, 7)

[node name="Light" type="PointLight2D" parent="."]
position = Vector2(1.99998, 5.00002)
scale = Vector2(2.34375, 2.42188)
shadow_color = Color(0, 0.27451, 1, 0)
texture = SubResource("GradientTexture2D_w4kjf")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Sonar" type="PointLight2D" parent="."]
visible = false
light_mask = 2
position = Vector2(4.99997, 4)
range_item_cull_mask = 3
shadow_color = Color(0.12549, 1, 0, 0)
shadow_filter_smooth = 1.9
texture = SubResource("GradientTexture2D_s5eh0")
texture_scale = 0.25

[node name="Energy timer" type="Timer" parent="."]
autostart = true

[node name="Sonar cooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="iFrames" type="Timer" parent="."]

[node name="Flash" type="Timer" parent="."]
wait_time = 0.05

[node name="Tiro 1 cooldown" type="Timer" parent="."]
wait_time = 0.3

[node name="ShapeCast" type="ShapeCast2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_qow0k")

[node name="Spawn Tiro 1" type="Marker2D" parent="."]
position = Vector2(52, 24)

[node name="ColorRect" type="ColorRect" parent="Spawn Tiro 1"]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="timeout" from="Energy timer" to="." method="_on_energy_timer_timeout"]
[connection signal="timeout" from="Sonar cooldown" to="." method="_on_sonar_cooldown_timeout"]
[connection signal="timeout" from="iFrames" to="." method="_on_i_frames_timeout"]
[connection signal="timeout" from="Flash" to="." method="_on_flash_timeout"]
[connection signal="timeout" from="Tiro 1 cooldown" to="." method="_on_tiro_1_cooldown_timeout"]
